登陆界面重构
2019/7/24
对登陆界面进行了重构，去掉了轮播图，改为了欢迎语，期望在后期加入小程序的logo；在下方加了copyright，改了按钮的左右边距。

--- a/pages/in/in.wxml
+++ b/pages/in/in.wxml
@@ -1,4 +1,5 @@
 <!--miniprogram/pages/in/in.wxml-->
+<!--
 <swiper class="swiper_box" indicator-dots="true" autoplay="true" current="{{ current }}" interval="5000" duration="{{ duration }}" circular="{{ circular }}" bindchange="swiperchange">
     <block>
       <swiper-item>
@@ -12,7 +13,12 @@
       </swiper-item>
     </block>
   </swiper>
-
+-->
+<view class="in">
+<view class="welcome">欢迎使用
+  <view class="a">xxxx小程序</view>
+  <view class="b">请选择您的身份</view>
+</view>
 <view style="margin-top:100rpx;">
   <view style="text-align:center " >
   <button class="weui-btn" type="primary" bindtap="doctor" formType='submit'>我是医生</button>    
@@ -22,6 +28,10 @@
   <button class="weui-btn" type="primary" bindtap="user" formType='submit'>我是病人</button>    
   </view>
 </view>
-
+<view class="footer">
+<view>Copyright©艾尔克林</view>
+<view>空军军医大学第三附属医院</view>
+</view>
+</view>
 
   
