--- a/pages/in/in.wxss
+++ b/pages/in/in.wxss
@@ -1,5 +1,3 @@
-.jobs {
-}
 
 .input {
   margin: 0rpx 30rpx 0rpx 30rpx;
@@ -13,7 +11,8 @@
 }
 
 .search_arr {
-  border: 1px solid #d0d0d0;
+  /*border: 1px solid #d0d0d0;*/
+  border: 1px solid #ffffff;
   border-radius: 10rpx;
   margin-left: 20rpx;
 }
@@ -35,7 +34,8 @@
   width: 15%;
   line-height: 150%;
   text-align: center;
-  border: 1px solid #d0d0d0;
+  /*border: 1px solid #d0d0d0;*/
+  border: 1px solid #ffffff;
   border-radius: 10rpx;
 }
 
@@ -98,10 +98,6 @@ page, .page, .page__bd {
   border-radius: 50%;
 }
 
-
-.reward {  
-}
-
 .reward view {
   white-space: nowrap;
 }
@@ -115,5 +111,35 @@ page, .page, .page__bd {
   padding-left: 20rpx;
   white-space: nowrap;
   border-radius: 30rpx;
-  background-color: #d3d0d0;
+  background-color: #ffffff;
+}
+/*********欢迎语部分****************/
+.welcome{
+  padding: 100rpx 0 0 0;
+  font-size: 60rpx;
+  font-weight: bolder;
+  color: #11db54;
+  text-align: center;
+}
+.welcome .a{
+  font-size: 40rpx;
+  font-weight: bold;
+  color:black;
+}
+.welcome .b{
+  padding: 80rpx 0 0 0;
+  font-size: 40rpx;
+  font-weight: normal;
+  color:black;
+}
+/*********按钮***********/
+.weui-btn{
+  margin: 0 50rpx 0 50rpx;
+}
+/***********footer************/
+.footer{
+padding:230rpx 0 0 0; 
+font-size: 30rpx;
+color: #bebcbc;
+text-align: center;
 }
