--- a/pages/dzhuce/dzhuce.wxml
+++ b/pages/dzhuce/dzhuce.wxml
@@ -1,3 +1,4 @@
+<!--
  <swiper class="swiper_box" indicator-dots="{{ indicatorDots }}" autoplay="{{ autoplay }}" current="{{ current }}" interval="{{ interval }}" duration="{{ duration }}" circular="{{ circular }}" bindchange="swiperchange">
     <block>
       <swiper-item>
@@ -5,49 +6,57 @@
       </swiper-item>
     </block>
   </swiper>
- <view wx:if="{{!success}}">
-    <view class='row'>
-        <view class='info'>
-               <input  class= 'info-input' bindinput="handleNewChangesAgain" placeholder="请输入你的姓名" />
-         </view>
- 
- </view>
- <view class='row'>
-        <view class='info'>
-               <input  class= 'info-input' bindinput="handleInputPhone" placeholder="请输入你的手机号" />
-         </view>
-          <button class='button' bindtap='doGetCode' disabled='{{disabled}}' style="background-color:{{color}}" >{{text}}</button>
- </view>
- <view class='row'>
-        <view class='info'>
-               <input  class= 'info-input' bindinput="handleVerificationCode" placeholder="请输入你的验证码" />
-         </view>
- 
- </view>
-  <view class='row'>
-        <view class='info'>
-               <input  class= 'info-input' bindinput="handleNewChanges" placeholder="请输入你的邮箱" />
-         </view>
- 
- </view>
-  <view class='row'>
-        <view class='info'>
-               <input  class= 'info-input' bindinput="handleNewChangesAgain" placeholder="请输入你所在的医院" />
-         </view>
- 
- </view>
-   <view class='row'>
-        <view class='info'>
-               <input   class= 'info-input' bindinput="handleNewChangesAgain" placeholder="请输入你所在的科室" />
-         </view>
- 
- </view>
-
-  <view style="text-align:center;margin-top:100rpx; " >
-  <button class="weui-btn" type="primary" bindtap="tijiao" formType='submit'>提交</button>    
+  -->
+  <view class="back">
+    <view class="words">若您是医生，请注册，若不是，请返回。</view>
+  <view wx:if="{{!success}}">
+      <view class='row'>
+          <view class='info'>
+                <input  class= 'info-input' placeholder-class="plah" bindinput="handleNewChangesAgain" placeholder="请输入你的姓名" />
+          </view>
+  
   </view>
- </view>
- <view class = 'success' wx:if="{{success}}">
- <view class='cheer'><icon type="success" size="24"/> 恭喜您注册成功!</view>
- <button type = "default" class = 'return' bindtap='return_home'>返回首页</button>
- </view>
+  <view class='row'>
+          <view class='info'>
+                <input  class= 'info-input' placeholder-class="plah" bindinput="handleInputPhone" placeholder="请输入你的手机号" />
+          </view>
+            <button class='button' bindtap='doGetCode' disabled='{{disabled}}' style="background-color:{{color}}" >{{text}}</button>
+  </view>
+  <view class='row'>
+          <view class='info'>
+                <input  class= 'info-input' placeholder-class="plah" bindinput="handleVerificationCode" placeholder="请输入你的验证码" />
+          </view>
+  
+  </view>
+    <view class='row'>
+          <view class='info'>
+                <input  class= 'info-input' placeholder-class="plah" bindinput="handleNewChanges" placeholder="请输入你的邮箱" />
+          </view>
+  
+  </view>
+    <view class='row'>
+          <view class='info'>
+                <input  class= 'info-input' placeholder-class="plah" bindinput="handleNewChangesAgain" placeholder="请输入你所在的医院" />
+          </view>
+  
+  </view>
+    <view class='row'>
+          <view class='info'>
+                <input   class= 'info-input' placeholder-class="plah" bindinput="handleNewChangesAgain" placeholder="请输入你所在的科室" />
+          </view>
+  
+  </view>
+
+    <view style="text-align:center;margin-top:50rpx; " >
+    <button class="weui-btn" type="primary" bindtap="tijiao" formType='submit'>提交</button>    
+    </view>
+  </view>
+  <view class = 'success' wx:if="{{success}}">
+  <view class='cheer'><icon type="success" size="24"/> 恭喜您注册成功!</view>
+  <button type = "default" class = 'return' bindtap='return_home'>返回首页</button>
+  </view>
+  <view class="footer">
+    <view>Copyright©艾尔克林</view>
+    <view>空军军医大学第三附属医院</view>
+  </view>
+</view>
