修改页面自适应
对登陆界面和医生注册界面进行自适应重构

--- a/pages/in/in.wxml
+++ b/pages/in/in.wxml
@@ -1,20 +1,20 @@
 <!--miniprogram/pages/in/in.wxml-->
 
+<view class="in">
 <swiper class="swiper_box" indicator-dots="true" autoplay="true" current="{{ current }}" interval="5000" duration="{{ duration }}" circular="{{ circular }}" bindchange="swiperchange">
-    <block>
-      <swiper-item>
-        <image src="../../img/1.jpg" class="slide-image" style='margin-top: 2px;vertical-align: middle;width:220px; height: 140px;'/>
+    <block  >
+      <swiper-item class="picture">
+       <image src="../../img/1.jpg" class="slide-image" />
       </swiper-item>
       <swiper-item>
-        <image src="../../img/2.jpg" class="slide-image" style='margin-top: 2px;vertical-align: middle;width:220px; height: 140px;'/>
+        <image src="../../img/2.jpg" class="slide-image" />
       </swiper-item>
       <swiper-item>
-        <image src="../../img/3.jpg" class="slide-image" style='margin-top: 2px;vertical-align: middle;width:220px; height: 140px;'/>
+        <image src="../../img/3.jpg" class="slide-image" style='vertical-align: middle;'/>
       </swiper-item>
     </block>
   </swiper>
-
-<view class="in">
+<!--<view class="in">-->
   <view class="welcome">欢迎使用
     <!--<view class="a">xxxx小程序</view>-->
     <view class="b">请选择您的身份</view>
