--- a/pages/dzhuce/dzhuce.wxss
+++ b/pages/dzhuce/dzhuce.wxss
@@ -70,18 +70,30 @@ page{
 /***********背景************/
 .back{
   background: #fff;
+  height: 100%;
 }
 /***********按钮************/
 .weui-btn{
   margin: 0 30rpx 0 30rpx;
 }
-/*********更改placeholder的文字颜色**********/
-.plah{
-  /*color: rgba(6, 182, 73, 0.788);*/
+.button{
+  width: 200rpx;
+  height: 70rpx;
+  line-height: 70rpx;
+  font-size: 28rpx;
+  background: rgba(6, 182, 73, 0.788);
+  float: right;
+  margin-right: 10rpx;
+  margin-top: 15rpx;
+  color: #FFFFFF;
 }
+/*********更改placeholder的文字颜色**********/
+/*.plah{
+  color: rgba(6, 182, 73, 0.788);
+}*/
 /***********footer************/
 .footer{
-padding:80rpx 0 0 0; 
+padding:100rpx 0 0 0; 
 font-size: 30rpx;
 color: #a09e9e;
 text-align: center;
