--- a/pages/uzhuce/uzhuce.wxss
+++ b/pages/uzhuce/uzhuce.wxss
@@ -6,8 +6,8 @@ page{
   overflow: hidden;
   line-height: 100rpx;
   border-bottom: 1rpx solid #ccc;
-  margin-left: 20rpx;
-  margin-right: 20rpx;
+  margin-left: 30rpx;
+  margin-right: 30rpx;
   color: #777;
   background: #fff;
  
@@ -25,7 +25,7 @@ page{
     float: left;
     width: 420rpx;
 }
-.button{
+/*.button{
   width: 200rpx;
   height: 70rpx;
   line-height: 70rpx;
@@ -35,7 +35,7 @@ page{
   margin-left: 10rpx;
   margin-top: 15rpx;
   color: #FFFFFF;
-}
+}*/
 .submit{
   margin-top: 50rpx;
   margin-left: 20rpx;
@@ -56,4 +56,34 @@ page{
 .return{
   margin: 20rpx;
  
+}
+/************重构部分************/
+.words{
+  font-size: 35rpx;
+  /*color: #777;*/
+  color:rgba(6, 182, 73, 0.788);
+  text-align: center;
+  padding: 20rpx 0 20rpx 0;
+}
+/***********按钮************/
+.weui-btn{
+  margin: 50rpx 30rpx 0 30rpx;
+}
+.button{
+  width: 200rpx;
+  height: 70rpx;
+  line-height: 70rpx;
+  font-size: 28rpx;
+  background: rgba(6, 182, 73, 0.788);
+  float: right;
+  margin-right: 10rpx;
+  margin-top: 15rpx;
+  color: #FFFFFF;
+}
+/***********footer************/
+.footer{
+padding:100rpx 0 0 0; 
+font-size: 30rpx;
+color: #a09e9e;
+text-align: center;
 }
