--- a/pages/Dmy/Dmy.wxml
+++ b/pages/Dmy/Dmy.wxml
@@ -9,7 +9,7 @@
   <view class="weui-cells">
     <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" wx:for="{{ items }}" wx:key="" data-text="{{ item.path }}" data-index="{{ index }}" bindtap="jump">
       <view class="weui-cell__hd">
-        <image src="{{ item.icon }}" style="margin-bottom: 2px;margin-right: 5px;vertical-align: middle;width:30px; height: 30px;"></image>
+        <image src="{{ item.icon }}" style="margin-bottom: 4rpx;margin-right: 10rpx;vertical-align: middle;width:60rpx; height: 60rpx;"></image>
       </view>
       <view class="weui-cell__bd">{{ item.text }}</view>
       <view class="weui-cell__ft weui-cell__ft_in-access">
@@ -23,7 +23,7 @@
   <view class="weui-cells">
     <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" wx:for="{{ settings }}" wx:key="" data-text="{{ item.path }}" data-index="{{ index }}" bindtap="jump1">
       <view class="weui-cell__hd">
-        <image src="{{ item.icon }}" style="margin-bottom: 2px;margin-right: 5px;vertical-align: middle;width:30px; height: 30px;"></image>
+        <image src="{{ item.icon }}" style="margin-bottom: 4rpx;margin-right: 10rpx;vertical-align: middle;width:60rpx; height: 60rpx;"></image>
       </view>
       <view class="weui-cell__bd">{{ item.text }}</view>
       <view class="weui-cell__ft weui-cell__ft_in-access">
@@ -36,7 +36,7 @@
   <view class="weui-cells">
     <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" wx:for="{{ message }}" wx:key="" data-text="{{ item.path }}" data-index="{{ index }}" bindtap="jump2">
       <view class="weui-cell__hd">
-        <image src="{{ item.icon }}" style="margin-bottom: 2px;margin-right: 5px;vertical-align: middle;width:30px; height: 30px;"></image>
+        <image src="{{ item.icon }}" style="margin-bottom: 4rpx;margin-right: 10rpx;vertical-align: middle;width:60rpx; height: 60rpx;"></image>
       </view>
       <view class="weui-cell__bd">{{ item.text }}</view>
       <view class="weui-cell__ft weui-cell__ft_in-access">
