--- a/pages/Dmy/Dmy.wxss
+++ b/pages/Dmy/Dmy.wxss
@@ -3,7 +3,7 @@
 	background-color: #fff;
 	padding-top: 60rpx;
 }
-.user-info image{
+.user-info .image{
 	display: block;
 	width: 180rpx;
 	height: 180rpx;
@@ -11,7 +11,7 @@
 	margin: 0 auto 40rpx;
 	box-shadow: 0 0 20rpx rgba(0,0,0,.2)
 }
-.user-info text{
+.user-info .text{
 	display: block;
 	text-align: center;
 	padding: 30rpx 0;
