--- a/pages/dzhuce/dzhuce.wxml
+++ b/pages/dzhuce/dzhuce.wxml
@@ -1,52 +1,64 @@
 <navigator open-type="navigateTo"/>
 <view class="back">
-    <view class="words">若您是医生，请注册，若不是，请返回。</view>
-  <view wx:if="{{!success}}">
-      <view class='row'>
-          <view class='info'>
-                <input  class= 'info-input' placeholder-class="plah" bindinput="handleNewChangesAgain" placeholder="请输入你的姓名" />
-          </view>
-  
-  </view>
-  <view class='row'>
-          <view class='info'>
-                <input  class= 'info-input' placeholder-class="plah" bindinput="handleInputPhone" placeholder="请输入你的手机号" />
-          </view>
-            <button class='button' bindtap='doGetCode' disabled='{{disabled}}' style="background-color:{{color}}" >{{text}}</button>
-  </view>
-  <view class='row'>
-          <view class='info'>
-                <input  class= 'info-input' placeholder-class="plah" bindinput="handleVerificationCode" placeholder="请输入你的验证码" />
-          </view>
-  
-  </view>
-    <view class='row'>
-          <view class='info'>
-                <input  class= 'info-input' placeholder-class="plah" bindinput="handleNewChanges" placeholder="请输入你的邮箱" />
-          </view>
-  
-  </view>
-    <view class='row'>
-          <view class='info'>
-                <input  class= 'info-input' placeholder-class="plah" bindinput="handleNewChangesAgain" placeholder="请输入你所在的医院" />
-          </view>
-  
-  </view>
-    <view class='row'>
-          <view class='info'>
-                <input   class= 'info-input' placeholder-class="plah" bindinput="handleNewChangesAgain" placeholder="请输入你所在的科室" />
-          </view>
-  
-  </view>
+  <!-- header -->
+  <view class="words">若您是医生，请注册，若不是，请返回。</view>
 
-    <view style="text-align:center;margin-top:50rpx; " >
-    <button class="weui-btn" type="primary" bindtap="tijiao" formType='submit'>提交</button>    
+  <!-- 表单 -->
+  <form bindsubmit='submit'>
+    <view wx:if="{{!success}}">
+        <!-- 姓名 -->
+        <view class='row'>
+          <view class='info'>
+            <input  class= 'info-input' placeholder-class="plah" bindinput="handleNewChangesAgain" placeholder="请输入你的姓名" name="dName"/>
+          </view>
+        </view>
+        <!-- 手机号和验证码 -->
+        <view class='row'>
+          <!-- 输入手机号 -->
+          <view class='info'>
+            <input  class= 'info-input' placeholder-class="plah" bindinput="handleInputPhone" placeholder="请输入你的手机号" name="dPhone"/>
+          </view>
+          <!-- 获取验证码按钮 -->
+          <button class='button' bindtap='doGetCode' disabled='{{disabled}}' style="background-color:{{color}}" >{{text}}</button>
+        </view>
+        <!-- 验证码 -->
+        <view class='row'>
+          <view class='info'>
+            <input  class= 'info-input' placeholder-class="plah" bindinput="handleVerificationCode" placeholder="请输入你的验证码" />
+          </view>
+        </view>
+        <!-- 邮箱 -->
+        <view class='row'>
+          <view class='info'>
+            <input  class= 'info-input' placeholder-class="plah" bindinput="handleNewChanges" placeholder="请输入你的邮箱" name="dMail"/>
+          </view>
+        </view>
+        <!-- 医院 -->
+        <view class='row'>
+          <view class='info'>
+            <input  class= 'info-input' placeholder-class="plah" bindinput="handleNewChangesAgain" placeholder="请输入你所在的医院" name="dHospital"/>
+          </view>
+        </view>
+        <!-- 科室 -->
+        <view class='row'>
+          <view class='info'>
+            <input   class= 'info-input' placeholder-class="plah" bindinput="handleNewChangesAgain" placeholder="请输入你所在的科室" name="dOffice"/>
+          </view>
+        </view>
+        <!-- 提交按钮 -->
+        <view style="text-align:center;margin-top:50rpx; " >
+          <!-- <button class="weui-btn" type="primary" bindtap="tijiao" formType='submit'>提交</button>     -->
+          <button class="weui-btn" type="primary" formType='submit'>提交</button>
+        </view>
     </view>
-  </view>
+  </form>
+
+  <!-- 成功之后的提示信息 -->
   <view class = 'success' wx:if="{{success}}">
-  <view class='cheer'><icon type="success" size="24"/> 恭喜您注册成功!</view>
-  <button type = "default" class = 'return' bindtap='return_home'>返回首页</button>
+    <view class='cheer'><icon type="success" size="24"/> 恭喜您注册成功!</view>
+    <button type = "default" class = 'return' bindtap='return_home'>返回首页</button>
   </view>
+  <!-- footer -->
   <view class="footer">
     <view>Copyright©艾尔克林</view>
     <view>空军军医大学第三附属医院</view>
