--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -1,22 +1,39 @@
 <!--pages/detail/detail.wxml-->
 <!--任务内容-->
 <view class="card">
-<view class="content">
-  <view class="title">下颚恢复训练</view>
-  <view class="time">2019/8/1——2019/9/10</view>
-  <view class="num">每日训练次数：<text>3</text></view>
-  <view class="require">病人要每日按照要求完成嘴部开合运动。</view>
-</view>
-<!--完成情况-->
-<view class="table">
-  <view class="column">
-    <view class="C tit">未完成用户</view>
-    <view class="C">小明</view>
+  <view class="content">
+    <view class="title">下颚恢复训练</view>
+    <view class="time">2019/8/1——2019/9/10</view>
+    <view class="num">每日训练次数：<text>3</text></view>
+    <view class="require">病人要每日按照要求完成嘴部开合运动。</view>
   </view>
-  <view class="line"></view>
-  <view class="column">
-    <view class="C tit">已完成用户</view>
-    <view class="C">小红</view>
+  <!--完成情况-->
+  <view class="table">
+    <view class="column">
+      <view class="C tit">未完成用户</view>
+      <view class="C">小明</view>
+    </view>
+    <view class="line"></view>
+    <view class="column">
+      <view class="C tit">已完成用户</view>
+      <view class="C">小红</view>
+    </view>
   </view>
 </view>
+<!-- 添加按钮 -->
+<view class="addbtn {{ishidden ? '':'closebtn'}}" bindtap='addpeople'>+</view>
+<!-- 搜索病人 -->
+<view class="searchback" hidden='{{ishidden}}'>
+  <form bindsubmit='submit'>
+    <view class="search">
+      <input class="phone" type='text' name="phone" placeholder="请输入要添加的患者手机号"></input>
+      <button class='searchbtn' formType='submit'>搜索</button>
+    </view>
+  </form>
+  <view class="user" wx:if="{{mark}}">
+    <view class="detail name">姓名：{{user.userName}}</view>
+    <view class="detail age">年龄：{{user.userAge}}</view>
+    <view class="detail">手机号：{{user.userPhone}}</view>
+    <view class="adduser {{isadd ? 'added':''}}" bindtap='adduser'>+</view>
+  </view>
 </view>
