--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -2,22 +2,25 @@
 <!--任务内容-->
 <view class="card">
   <view class="content">
-    <view class="title">下颚恢复训练</view>
-    <view class="time">2019/8/1——2019/9/10</view>
+    <view class="title">{{jobDetail.jobTitle}}</view>
+    <view class="time">{{jobDetail.createTime}}</view>
     <view class="num">每日训练次数：<text>3</text></view>
-    <view class="require">病人要每日按照要求完成嘴部开合运动。</view>
+    <view class="require">{{jobDetail.jodDescribe}}</view>
   </view>
   <!--完成情况-->
   <view class="table">
     <view class="column">
-      <view class="C tit">未完成用户</view>
-      <view class="C">小明</view>
+      <view class="C tit">参与用户</view>
+      <view class="C" wx:for-items="{{jobuser}}" wx:for-item="item">
+        <text>{{item.userName}}</text>
+        <text style='margin-left:30rpx;'>{{item.userAge}}岁</text>
+      </view>
     </view>
-    <view class="line"></view>
+    <!-- <view class="line"></view>
     <view class="column">
       <view class="C tit">已完成用户</view>
       <view class="C">小红</view>
-    </view>
+    </view> -->
   </view>
 </view>
 <!-- 添加按钮 -->
@@ -36,4 +39,5 @@
     <view class="detail">手机号：{{user.userPhone}}</view>
     <view class="adduser {{isadd ? 'added':''}}" bindtap='adduser'>+</view>
   </view>
+  <view class="none" wx:else hidden='{{hiddenpeople}}'>查无此人</view>
 </view>
