部分新要求完成
修改了医生注册页面，发布任务界面

--- a/pages/account/account.wxml
+++ b/pages/account/account.wxml
@@ -1,5 +1,5 @@
-<!--pages/message/message.wxml-->
+<!--pages/account/account.wxml-->
 <view class="card">
-  <view class="name">doctor W</view>
+  <view class="name">病人 W</view>
   <view class="words">情况好转，训练有效</view>
 </view>
