--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -45,7 +45,11 @@ page{
 .C{
   display: flex;
   font-size: 26rpx;
-  margin:  0 0 5rpx 0;
+  /* margin:  0 0 10rpx 0; */
+  padding: 0 0 10rpx 0;
+}
+.person{
+  border-bottom: 1px solid #eee;
 }
 /*表格中间竖分割线*/
 .line{
