--- a/pages/dzhuce/dzhuce.wxml
+++ b/pages/dzhuce/dzhuce.wxml
@@ -19,7 +19,7 @@
             <input  class= 'info-input' placeholder-class="plah" bindinput="handleInputPhone" placeholder="请输入你的手机号" name="dPhone"/>
           </view>
           <!-- 获取验证码按钮 -->
-          <button class='button' bindtap='doGetCode' disabled='{{disabled}}' style="background-color:{{color}}" >{{text}}</button>
+          <!-- <button class='button' bindtap='doGetCode' disabled='{{disabled}}' style="background-color:{{color}}" >{{text}}</button> -->
         </view>
         <!-- 验证码 -->
         <view class='row'>
@@ -36,13 +36,15 @@
         <!-- 医院 -->
         <view class='row'>
           <view class='info'>
-            <input  class= 'info-input' placeholder-class="plah" bindinput="handleNewChangesAgain" placeholder="请输入你所在的医院" name="dHospital"/>
+            <!-- <input  class= 'info-input' placeholder-class="plah" bindinput="handleNewChangesAgain" placeholder="请输入你所在的医院" name="dHospital"/> -->
+            <view class="info-input">第四军医大口腔医院</view>
           </view>
         </view>
         <!-- 科室 -->
         <view class='row'>
           <view class='info'>
-            <input   class= 'info-input' placeholder-class="plah" bindinput="handleNewChangesAgain" placeholder="请输入你所在的科室" name="dOffice"/>
+            <!-- <input   class= 'info-input' placeholder-class="plah" bindinput="handleNewChangesAgain" placeholder="请输入你所在的科室" name="dOffice"/> -->
+            <view class="info-input">口腔科</view>
           </view>
         </view>
         <!-- 提交按钮 -->
